# CUBIC_Auth

./: .gitignore  Dockerfile  Dockerfile-PROD  alembic.ini  build.sh  docker-compose.yml  requirements.txt  server.py
cbns/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  requirements.txt  send_notification.py  server.py
cbns/src/: client_action.rs  main (conflicted copy 2019-08-31 131646).rs  main.rs  messages (conflicted copy 2019-08-31 131646).rs  messages.rs  notification_definition.rs  notification_server (conflicted copy 2019-08-31 131646).rs  notification_server.rs  notification_session.rs
cbns/src/endpoint/: mod.rs  post_channel.rs  post_device.rs  root.rs  socket_poll.rs
cbns/templates/: index.html
cbns_globalUpdate/: Cargo.toml  Dockerfile  update.py
cbns_globalUpdate/src/: main.rs
migrations/: env.py
migrations/versions/: 1cd0fbae2241_remove_locationhistory.py  3315a04bc543_create_device_table.py  532303baaabd_add_url_to_application.py  775659ee27ec_remove_uneeded_device_columns.py  943683dd60e3_create_application_table.py  a565f0b413f6_create_session_access_table.py  aa6a596ffeb6_create_location_history_table.py  b0e4078fa087_create_login_application_table.py  (+6 more)
resource/: spectre-exp.min.css  spectre.min.css  ukauth.js
src/: __main__.py  database.py
templates/: applicationConnectionRequest.html  application_auth.html  application_create.html  applications.html  css_common.html  developer.html  login.html  loginSuccess.html  profile.html  register.html  settings_devices.html  settings_header.html  test_login.html
(+21 files in other folders)
