[package]
name = "cbns"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.3"
actix-web-actors = "1.0.1"

json = "0.11.14"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
futures = "0.1.28"
tokio = "0.1.22"
env_logger = "*"
rand = "*"
debug-rs = "*"

dotenv = "*"
dotenv_codegen = "*"
