[package]
name = "cbns"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.3"
actix-web-actors = "1.0.1"

json = "0.11.14"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
futures = "0.1.28"
tokio = "0.1.22"
env_logger = "0.7.1"
rand = "0.7.3"
debug-rs = "0.1.3"

dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
